strings moved in strings.xml

--- a/RailsOfIndia/app/src/main/res/values/strings.xml
+++ b/RailsOfIndia/app/src/main/res/values/strings.xml
@@ -94,5 +94,61 @@
     <string name="pnr_info">Pnr Information</string>
     <string name="input_submit">Input Submit</string>
     <string name="train_route_map">Get map view of the train route</string>
+    <string name="train_name">Train Name</string>
+    <string name="train_number">Train Number</string>
+    <string name="train_results">Results</string>
+    <string name="current_status">Current Status</string>
+    <string name="train_status_name_number">Train Name Number</string>
+    <string name="current_station">Current Station</string>
+    <string name="pnr_number">Pnr Number</string>
+    <string name="pnr_train_name">Train Name</string>
+    <string name="pnr_train_number">Train Number</string>
+    <string name="source">Source</string>
+    <string name="destination">Destination</string>
+    <string name="reserved_upto">Reserved Upto</string>
+    <string name="select_date">Select date</string>
+    <string name="default_date">19-02-2017</string>
+    <string name="classlevel">Class</string>
+    <string name="category">Category</string>
+    <string name="sr_no">Sr No.</string>
+    <string name="status">Status</string>
+    <string name="runs_on">Runs On</string>
+    <string name="passenger_number">Passenger Number</string>
+    <string name="booking_status">Booking Status</string>
+    <string name="station">Station</string>
+    <string name="code">Code</string>
+    <string name="day">Day</string>
+    <string name="arrival">Arrival</string>
+    <string name="departure">Departure</string>
+    <string name="fragmentId">fragmentId</string>
+    <string name="search_String">searchString</string>
+    <string name="trainRoute">trainRoute</string>
+    <string name="Notifications">Notifications</string>
+    <string name="no_notifications_found">No Notifications Found</string>
+    <string name="SearchActivity">SearchActivity</string>
+    <string name="ErrorStream">Error closing stream</string>
+    <string name="something_wrong">Something went wrong</string>
+    <string name="error">Error</string>
+    <string name="pnrStatus">pnrStatus</string>
+    <string name="loading">Loading</string>
+    <string name="date_format">yyyyMMdd</string>
+    <string name="testAdsDeviceId">F8BBAB0E3BCB44423AD273ADC677CF57</string>
+    <string name="invalidInput">Invalid Input</string>
+    <string name="invalidInputMsg">Please Enter Valid Input</string>
+    <string name="liveStatusError">Live Status Error</string>
+    <string name="liveStatusErrorMsg">Train not scheduled to run on this date</string>
+    <string name="pnrError">Pnr Status Error</string>
+    <string name="pnrNotGenerated">Pnr not yet Generated</string>
+    <string name="serverNotResponding">Server Not Responding</string>
+    <string name="seatAvailabilityError">Seat Availability Error</string>
+    <string name="seatAvailability">seatAvailability</string>
+    <string name="clearNotifications">Clear Notifications</string>
+    <string name="clearNotificationsWarn">Do you really want to clear notifications ?</string>
+    <string name="notificationsCleared">All Notifications Cleared</string>
+    <string name="clearPreferences">Clear Saved Preferences</string>
+    <string name="clearPreferencesError">Do you really want to clear saved Pnrs ?</string>
+    <string name="clearPreferenesCleared">All Saved Pnrs Cleared</string>
+    <string name="trainNameNumber">trainNameNumber</string>
+    <string name="trainRouteError">Train Route Error</string>
 
 </resources>
